--- a/packages/single-price-grid-component/package.json
+++ b/packages/single-price-grid-component/package.json
@@ -24,6 +24,10 @@
     "url": "https://github.com/hyunmos/sample/issues"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "parcel": "^1.12.4"
+  },
+  "devDependencies": {
+    "sass": "^1.26.5"
   }
 }
